    lines stay together when -j is used.

  - Add portability fixes for a number of tests.

  - Accomodate the fact that Cygwin's os.path.normcase() lies about
    the underlying system being case-sensitive.

  - Fix an incorrect _concat() call in the $RCINCFLAGS definition for
    the mingw Tool.

  - Fix a problem with the msvc tool with Python versions prior to 2.3.

  From Chris Burghart:

  - Fix the ability to save/restore a PackageOption to a file.

  From David M. Cooke:

  - Make the Fortran scanner case-insensitive for the INCLUDE string.

  From Charles Crain:

  - If no version of MSVC is detected but the tool is specified,
    use the MSVC 6.0 paths by default.

  - Ignore any "6.1" version of MSVC found in the registry; this is a
    phony version number (created by later service packs?) and would
    throw off the logic if the user had any non-default paths configure.

  - Correctly detect if the user has independently configured the MSVC
    "include," "lib" or "path" in the registry and use the appropriate
    values.  Previously, SCons would only use the values if all three
    were set in the registry.

  - Make sure side-effect nodes are prepare()d before building their
    corresponding target.

  - Preserve the ability to call BuildDir() multiple times with the
    same target and source directory arguments.

  From Scott Lystig Fritchie:

  - Fix the ability to use a custom _concat() function in the
    construction environment when calling _stripixes().

  - Make the message about ignoring a missing SConscript file into a
    suppressable Warning, not a hard-coded sys.stderr.write().

  - If a builder can be called multiple times for a target (because
    the sources and overrides are identical, or it's a builder with the
    "multi" flag set), allow the builder to be called through multiple
    environments so long as the builders have the same signature for
    the environments in questions (that is, they're the same action).
